task2/juice-shop/juice-shop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  namespace: default
  labels:
    app: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
        - name: juice-shop
          image: bkimminich/juice-shop
          ports:
            - containerPort: 3000
