task2/juice-shop/juice-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
spec:
  selector:
    app: juice-shop
  ports:
    - protocol: TCP
      port: 80   # Exposed service port
      targetPort: 3000  # Port inside the container
